Fix spells/traits collapse layout height and scroll

--- a/src/components/spells/spells.scss
+++ b/src/components/spells/spells.scss
@@ -1,6 +1,7 @@
 @use "../../styles/common" as *;
 
 .dw-spells-abilities {
+  --dw-cards-row-height: 16rem;
   display: flex;
   flex-direction: column;
   min-height: 38rem;
@@ -85,6 +86,13 @@
     }
   }
 
+  &--view-cards.dw-spells-abilities--cards-collapsed {
+    .dw-spells-abilities__section--spells,
+    .dw-spells-abilities__section--traits {
+      flex: 0 0 auto;
+    }
+  }
+
   &--view-text {
     .dw-spells-abilities__section--spells,
     .dw-spells-abilities__section--traits,
@@ -135,6 +143,32 @@
 
     .dw-kindred-traits__title--notes {
       display: inline;
+    }
+  }
+
+  &--view-both.dw-spells-abilities--cards-collapsed {
+    .dw-spells-abilities__section--spells,
+    .dw-spells-abilities__section--traits {
+      flex: 0 0 auto;
+    }
+
+    .dw-spells-abilities__section--notes {
+      flex: 0 0 10rem;
+      min-height: 10rem;
+    }
+  }
+
+  &--view-both.dw-spells-abilities--traits-collapsed:not(.dw-spells-abilities--spells-collapsed) {
+    .dw-spells {
+      height: auto;
+      max-height: var(--dw-cards-row-height, 16rem);
+    }
+  }
+
+  &--view-both.dw-spells-abilities--spells-collapsed:not(.dw-spells-abilities--traits-collapsed) {
+    .dw-ability-items {
+      height: auto;
+      max-height: var(--dw-cards-row-height, 16rem);
     }
   }
 
